Fix long virtual paths breaking layout on mobile. Fixes #19.

--- a/custom/themes/opensceneryx/style.css
+++ b/custom/themes/opensceneryx/style.css
@@ -210,7 +210,11 @@ div.virtualPath p,
 div.extendedVirtualPath p,
 div.deprecatedVirtualPath p,
 div.externalVirtualPath p {
-    margin: 0;
+	margin: 0;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-word;
+	-ms-word-break: break-all;
 }
 
 div.thumbnailcontainer {
